Cache PEP aliases in a hash table, not deprecated handle qdata

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=69194
Signed-off-by: Simon McVittie <simon.mcvittie@collabora.co.uk>
Reviewed-by: Xavier Claessens <xavier.claessens@collabora.co.uk>